# DynamixNetworks_Fake_News_Detection

./: .gitignore  README.md  check_labels.py  inspect_dataset.py  packages.txt  pyproject.toml  render.yaml  requirements.txt
api/: main.py  schemas.py  services.py
configs/: baseline.yaml
data/raw/: README.md
models/: baseline.joblib  labels.json  metrics.json  vectorizer.joblib
notebooks/: README.md
src/fnd/: __init__.py  config.py  predict.py  train.py
src/fnd/data/: loader.py
src/fnd/features/: text_cleaner.py
src/fnd/models/: explainer.py  pipeline.py
tests/: test_pipeline.py  test_text_cleaner.py
ui/: app.py
